# holey-bytes

./: .gitignore  Cargo.toml  DESIGN_DOC.md  after-ops.txt  befor-ops.txt  c-abi.md  f  f.txt  f1.txt  f2.txt  fooll-orig.txt  fooll.txt  ited:  main.hb  pointers.hb  profile.json  program.hbf  rustc-ice-2024-07-08T07_20_46-1950832.txt  rustc-ice-2024-07-08T07_20_46-1950833.txt  rustc-ice-2024-07-08T07_21_05-1951145.txt  rustc-ice-2024-07-08T07_21_05-1951146.txt  rustc-ice-2024-07-08T07_21_22-1951438.txt  rustc-ice-2024-07-08T07_21_22-1951439.txt  rustc-ice-2024-07-08T07_22_22-1952328.txt  rustc-ice-2024-07-08T07_22_22-1952329.txt  rustc-ice-2024-07-08T07_22_59-1952894.txt  rustc-ice-2024-07-08T07_22_59-1952895.txt  rustc-ice-2024-09-02T01_00_44-1001645.txt  rustfmt.toml  shell.nix  spec.md  test.hb  test.hba
.cargo/: config.toml
depell/: Cargo.toml  README.md
depell/html-macro/: Cargo.toml
depell/html-macro/src/: lib.rs
depell/src/: index.css  index.js  main.rs  post-page.html  schema.sql  welcome-page.html
depell/wasm-fmt/: Cargo.toml
depell/wasm-fmt/src/: lib.rs
depell/wasm-hbc/: Cargo.toml
depell/wasm-hbc/src/: lib.rs
depell/wasm-hbfmt/: Cargo.toml
depell/wasm-hbfmt/src/: lib.rs
depell/wasm-rt/: Cargo.toml
depell/wasm-rt/src/: lib.rs
hbasm/: Cargo.toml
hbasm/assets/: add.hbasm  celsius_converter.hbasm  ecall.hbasm  exit.lua  inf_loop.hbasm  label.lua  memory.hbasm  serial_driver.hbasm
hbasm/examples/: hello-linux.rhai  macros.rhai
hbasm/examples/ableos/: main.rhai  std.rhai
hbasm/src/: arraylist.rs  data.rs  ins.rs  label.rs  lib.rs  linker.rs  macros.rs  main.rs  object.rs  text.rs
hbasm/src/macros/: asm.rs  mod.rs  text.rs
hblang/: Cargo.toml  README.md  build.rs  command-help.txt  foo.b  formatter_arithmetic.actual
hblang/examples/: arithmetic.hb  different_types.hb  directives.hb  fb_driver.hb  functions.hb  generic_types.hb  global_variables.hb  if_statement.hb  loops.hb  main_fn.hb  pointers.hb  struct_operators.hb  structs.hb  variables.hb
hblang/hblang-f/src/: codegen.rs  parser.rs
hblang/src/: codegen.rs  codegen2.rs  fmt.rs  fs.rs  ident.rs  instrs.rs  lexer.rs  lib.rs  log.rs  main.rs  parser.rs  son.rs  tests.rs  typechk.rs  vc.rs
hblang/tests/: codegen_tests_arithmetic.txt  codegen_tests_arrays.txt  codegen_tests_c_strings.txt  codegen_tests_comments.txt  codegen_tests_comptime_function_from_another_file.txt  codegen_tests_comptime_min_reg_leak.txt  codegen_tests_different_types.txt  codegen_tests_directives.txt  codegen_tests_example.txt  codegen_tests_fb_driver.txt  codegen_tests_functions.txt  codegen_tests_generic_functions.txt  codegen_tests_generic_types.txt  codegen_tests_global_variables.txt  codegen_tests_hex_octal_binary_literals.txt  codegen_tests_idk.txt  codegen_tests_if_statements.txt  codegen_tests_inline.txt  codegen_tests_inline_test.txt  codegen_tests_integer_inference_issues.txt  codegen_tests_loops.txt  codegen_tests_pointers.txt  codegen_tests_request_page.txt  codegen_tests_some_generic_code.txt  codegen_tests_sort_something_viredly.txt  codegen_tests_struct_operators.txt  codegen_tests_struct_patterns.txt  codegen_tests_struct_return_from_module_function.txt  codegen_tests_structs.txt  codegen_tests_tests_ptr_to_ptr_copy.txt  codegen_tests_variables.txt  codegen_tests_wide_ret.txt  codegen_tests_writing_into_string.txt  hblang::codegen::tests::example.txt  hblang::codegen::tests::functions.txt  hblang::lexer::tests::examples.txt  hblang::lexer::tests::whitespace.txt  hblang::parser::tests::example.txt  hblang_codegen_tests_arithmetic.txt  hblang_codegen_tests_example.txt  (+26 more)
hblang/text-prj/: main.hb  pkg.hb
hbvm/: Cargo.toml
hbvm/assets/: ecall.hb  inf_loop.hb  memory.hb
hbvm/fuzz/: .gitignore  Cargo.toml
hbvm/fuzz/fuzz_targets/: vm.rs
hbvm/src/: bmc.rs  lib.rs  main.rs  memory.rs  utils.rs  validate.rs  value.rs  vmrun.rs
hbvm/src/bytecode/: ops.rs  types.rs
hbvm/src/engine/: call_stack.rs  config.rs  mod.rs  regs.rs
hbvm/src/engine/tests/: mod.rs
hbvm/src/float/: aarch64.rs  mod.rs  x86_64.rs
hbvm/src/mem/: addr.rs  bmc.rs  mod.rs
hbvm/src/mem/softpaging/: icache.rs  lookup.rs  mapping.rs  mod.rs
hbvm/src/softpaging/: lookup.rs  mapping.rs  mod.rs  paging.rs
hbvm/src/vm/: mod.rs  trap.rs  value.rs
hbvm/src/vm/mem/: mod.rs  paging.rs  pfhandler.rs
hbxrt/: Cargo.toml
hbxrt/src/: linux.rs  main.rs  mem.rs  unix.rs  win32.rs
lang/: Cargo.toml  README.md  command-help.txt
lang/src/: codegen.rs  fmt.rs  fs.rs  fuzz.rs  fuzz_main.rs  lexer.rs  lib.rs  main.rs  parser.rs  regalloc.rs  son.rs  utils.rs  vc.rs
lang/src/son/: hbvm.rs
lang/src/son/hbvm/: my_regalloc.rs  regalloc.rs  their_regalloc.rs
lang/tests/: codegen_tests_arrays.txt  codegen_tests_comments.txt  codegen_tests_comptime_function_from_another_file.txt  codegen_tests_directives.txt  codegen_tests_generic_types.txt  codegen_tests_global_variables.txt  codegen_tests_idk.txt  codegen_tests_if_statements.txt  codegen_tests_inline_test.txt  codegen_tests_inlined_generic_functions.txt  codegen_tests_integer_inference_issues.txt  codegen_tests_pointers.txt  codegen_tests_request_page.txt  codegen_tests_sort_something_viredly.txt  codegen_tests_struct_operators.txt  codegen_tests_struct_patterns.txt  codegen_tests_struct_return_from_module_function.txt  codegen_tests_structs.txt  codegen_tests_variables.txt  codegen_tests_wide_ret.txt  codegen_tests_writing_into_string.txt  son_tests_advanced_floating_point_arithmetic.txt  son_tests_aliasing_overoptimization.txt  son_tests_arrays.txt  son_tests_big_array_crash.txt  son_tests_branch_assignments.txt  son_tests_c_strings.txt  son_tests_comments.txt  son_tests_comptime_function_from_another_file.txt  son_tests_comptime_min_reg_leak.txt  son_tests_conditional_stores.txt  son_tests_const_folding_with_arg.txt  son_tests_constants.txt  son_tests_die.txt  son_tests_different_function_destinations.txt  son_tests_different_types.txt  son_tests_directives.txt  son_tests_exhaustive_loop_testing.txt  son_tests_fb_driver.txt  son_tests_floating_point_arithmetic.txt  (+57 more)
(+52 files in other folders)
