[workspace]
resolver = "2"
members = [
	"hbbytecode",
	"hbvm",
	"hbxrt",
	"xtask",
	"hblang",
	"hbjit",
	"depell",
	"depell/wasm-hbfmt"
]

[profile.release]
lto = true
debug = true
codegen-units = 1
panic = "abort"

[profile.small]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
