[workspace]
resolver = "2"
members = [
	"bytecode",
	"vm",
	"xrt",
	"xtask",
	"lang",
	"depell",
	"depell/wasm-fmt",
	"depell/wasm-hbc",
]

[workspace.dependencies]
hbbytecode = { path = "bytecode", default-features = false }
hbvm = { path = "vm" }
hbxrt = { path = "xrt" }
hblang = { path = "lang", default-features = false }
hbjit = { path = "jit" }

[profile.release]
lto = true
debug = true
#strip = true
codegen-units = 1
panic = "abort"

[profile.small]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
