cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
	"bytecode",
	"vm",
	"xrt",
	"xtask",
	"lang",
	"depell",
	"depell/wasm-fmt",
	"depell/wasm-hbc",
	"depell/wasm-rt",
]

[workspace.dependencies]
hbbytecode = { path = "bytecode", default-features = false }
hbvm = { path = "vm", default-features = false }
hbxrt = { path = "xrt" }
hblang = { path = "lang", default-features = false }
hbjit = { path = "jit" }

[profile.release]
lto = true
debug = true
#strip = true
codegen-units = 1
panic = "abort"

[profile.small]
rustflags = ["-Zfmt-debug=none", "-Zlocation-detail=none"]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.small-dev]
inherits = "dev"
opt-level = "z"
strip = "debuginfo"
panic = "abort"

[profile.fuzz]
inherits = "dev"
debug = true
opt-level = 3
panic = "abort"
