[package]
name = "depell"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "rand_core"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["rand_core"] }
getrandom = "0.2.15"
rand_core = { version = "0.6.4", features = ["getrandom"] }
x25519-dalek = { version = "2.0.1", default-features = false }
