[package]
name = "hbasm"
version = "0.1.0"
edition = "2021"

[dependencies]
hbbytecode = { path = "../hbbytecode" }
paste = "1.0"
hashbrown = "0.14.0"

[dependencies.lasso]
version = "0.7"
default-features = false
features = ["no-std"]

[dependencies.logos]
version = "0.13"
default-features = false
features = ["export_derive"]
