[package]
name = "hbasm"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne    = "0.3"
bytemuck   = "1.13"
hashbrown  = "0.14"
hbbytecode = { path = "../hbbytecode" }
literify   = "0.1"
paste      = "1.0"

[dependencies.lasso]
version = "0.7"
default-features = false
features = ["no-std"]

[dependencies.logos]
version = "0.13"
default-features = false
features = ["export_derive"]
