[package]
name = "hblang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hbc"
path = "src/main.rs"

[dependencies]
hashbrown = { version = "0.15.0", default-features = false, features = ["raw-entry"] }
hbbytecode = { version = "0.1.0", path = "../hbbytecode" }
hbvm = { path = "../hbvm", features = ["nightly"] }
log = { version = "0.4.22", features = ["release_max_level_error"] }
regalloc2 = { git = "https://github.com/jakubDoka/regalloc2", branch = "reuse-allocations", features = [] }

[dev-dependencies]
env_logger = "0.11.5"

[features]
default = ["std"]
std = []
