[package]
name = "hbvm"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = ["alloc"]
alloc   = []
nightly = []

[dependencies]
delegate          = "0.9"
derive_more       = "0.99"
hbbytecode.path   = "../hbbytecode"
paste             = "1.0"
sealed            = "0.5"
static_assertions = "1.0"
