[package]
name        = "hbxrt"
version     = "0.1.0"
edition     = "2021"
default-run = "hbxrt"

[dependencies]
hbvm.path = "../hbvm"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["mman", "signal"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]
