[package]
name = "hblang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hbc"
path = "src/main.rs"

[dependencies]
hashbrown = { version = "0.15.0", default-features = false, features = ["raw-entry"] }
hbbytecode = { workspace = true, features = ["disasm"] }
hbvm = { workspace = true, features = ["nightly"] }
log = "0.4.22"

[dependencies.regalloc2]
git = "https://github.com/jakubDoka/regalloc2"
branch = "reuse-allocations"
optional = true
features = ["trace-log"]

[features]
default = ["std", "opts"]
std = []
opts = ["regalloc2"]
no_log = ["log/max_level_off"]
