[package]
name = "hblang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hbc"
path = "src/main.rs"

[[bin]]
name = "fuzz"
path = "src/fuzz_main.rs"

[dependencies]
hashbrown = { version = "0.15.0", default-features = false, features = ["raw-entry", "allocator-api2"] }
hbbytecode = { workspace = true, features = ["disasm"] }
hbvm = { workspace = true, features = ["nightly"] }
log = "0.4.22"

[dependencies.regalloc2]
git = "https://github.com/jakubDoka/regalloc2"
branch = "reuse-allocations"
default-features = false

[features]
default = ["std", "regalloc2/trace-log"]
std = []
no_log = ["log/max_level_off"]
