[package]
name = "hblang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hbc"
path = "src/main.rs"

[[bin]]
name = "fuzz"
path = "src/fuzz_main.rs"

[dependencies]
hbbytecode = { workspace = true, features = ["disasm"] }
hbvm = { workspace = true, features = ["nightly"] }
hashbrown = { version = "0.15.0", default-features = false, features = ["raw-entry"] }
log = "0.4.22"

[features]
default = ["std"]
std = []
no_log = ["log/max_level_off"]
